--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+		<script>
+			if (global === undefined) {
+				var global = window;
+			}
+		</script>	
+		<script type="module">
+    import { Buffer } from "buffer";
+    window.Buffer = Buffer;
+</script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
